Add more dockerignore functions & components.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,9 +23,25 @@ export(dfi_stopsignal)
 export(dfi_user)
 export(dfi_volume)
 export(dfi_workdir)
+export(di_add)
+export(di_remove)
+export(di_replace)
+export(dk_template_ignore_common)
+export(dk_template_ignore_data)
+export(dk_template_ignore_editor)
+export(dk_template_ignore_git)
+export(dk_template_ignore_node)
+export(dk_template_ignore_os)
+export(dk_template_ignore_packrat)
+export(dk_template_ignore_python)
+export(dk_template_ignore_r)
+export(dk_template_ignore_raw_data)
+export(dk_template_ignore_renv)
 export(dockerfile)
 export(dockerignore)
 export(get_package_manager)
 export(has_instruction)
 export(is_dockerfile)
 export(is_dockerignore)
+export(read_dockerignore)
+export(write_dockerignore)
