Add read/write for Dockerfiles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,5 +43,7 @@ export(get_package_manager)
 export(has_instruction)
 export(is_dockerfile)
 export(is_dockerignore)
+export(read_dockerfile)
 export(read_dockerignore)
+export(write_dockerfile)
 export(write_dockerignore)
