--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ S3method(print,dockerfile)
 S3method(print,dockerignore)
 export(check_dockerfile)
 export(check_dockerignore)
+export(determine_os)
+export(determine_package_manager)
 export(dfi_add)
 export(dfi_arg)
 export(dfi_cmd)
@@ -26,6 +28,11 @@ export(dfi_workdir)
 export(di_add)
 export(di_remove)
 export(di_replace)
+export(dk_add_sysreqs)
+export(dk_from_description)
+export(dk_from_renv)
+export(dk_from_script)
+export(dk_from_session)
 export(dk_template_ignore_common)
 export(dk_template_ignore_data)
 export(dk_template_ignore_editor)
@@ -39,7 +46,7 @@ export(dk_template_ignore_raw_data)
 export(dk_template_ignore_renv)
 export(dockerfile)
 export(dockerignore)
-export(get_package_manager)
+export(generate_pkg_install_cmd)
 export(has_instruction)
 export(is_dockerfile)
 export(is_dockerignore)
