--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,12 @@ export(dfi_stopsignal)
 export(dfi_user)
 export(dfi_volume)
 export(dfi_workdir)
+export(dfm_add_line)
+export(dfm_group_similar)
+export(dfm_move_line)
+export(dfm_remove_line)
+export(dfm_replace_line)
+export(dfm_sort_by_instruction)
 export(di_add)
 export(di_remove)
 export(di_replace)
