Add templating system

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,9 @@ export(dk_from_description)
 export(dk_from_renv)
 export(dk_from_script)
 export(dk_from_session)
+export(dk_register_template)
+export(dk_template_base)
+export(dk_template_custom)
 export(dk_template_ignore_common)
 export(dk_template_ignore_data)
 export(dk_template_ignore_editor)
@@ -50,6 +53,8 @@ export(dk_template_ignore_python)
 export(dk_template_ignore_r)
 export(dk_template_ignore_raw_data)
 export(dk_template_ignore_renv)
+export(dk_template_plumber)
+export(dk_template_shiny)
 export(dockerfile)
 export(dockerignore)
 export(generate_pkg_install_cmd)
