--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ S3method(print,dockerfile)
 S3method(print,dockerignore)
 export(check_dockerfile)
 export(check_dockerignore)
-export(determine_os)
+export(determine_linux_distribution)
 export(determine_package_manager)
 export(dfi_add)
 export(dfi_arg)
