--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,10 +22,10 @@ Imports:
     jsonlite
 Suggests:
     knitr,
-    rmarkdown,
+    quarto,
     testthat (>= 3.0.0)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+VignetteBuilder: quarto
 Config/testthat/edition: 3
-VignetteBuilder: knitr
